--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.github.jamesh321.crook</groupId>
   <artifactId>crook</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>crook</name>
   <url>http://www.example.com</url>
