--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <version>1.0</version>
 
   <name>crook</name>
-  <url>http://www.example.com</url>
+  <url>https://github.com/jamesh321/crook</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
